Vector of Alienation Page

--- a/guides/mod01-voa.html
+++ b/guides/mod01-voa.html
@@ -27,37 +27,34 @@
       Moddb Original Page: 
       <a href="https://www.moddb.com/mods/olr-vector-of-alienation" target="_blank" class="text-blue-400 hover:underline">Vector of Alienation</a>
     </p>
-    <p class="text-gray-300 mb-1">
+    <p class="text-gray-300 mb-6">
       Ap-pro Original Page: 
       <a href="https://ap-pro.ru/stuff/ten_chernobylja/vektor-otchuzhdeniya-r158/" target="_blank" class="text-blue-400 hover:underline">Вектор Отчуждения</a>
     </p>
     <hr class="border-gray-600 mb-6">
 
     <!-- Credits Section -->
-<h2 class="text-xl font-semibold mb-2">Credits</h2>
+    <h2 class="text-xl font-semibold mb-2">Credits</h2>
 
-<h3 class="font-semibold text-gray-200 mb-1">Mod Creator</h3>
-<p class="text-gray-300 mb-2">
- - Dorian23Grey
-</p>
+    <h3 class="font-semibold text-gray-200 mb-1">Mod Creator</h3>
+    <ul class="list-disc list-inside text-gray-300 mb-4">
+      <li>Dorian23Grey</li>
+    </ul>
 
-<h3 class="font-semibold text-gray-200 mb-1">Translation</h3>
-<p class="text-gray-300 mb-2">
-  - Chocohex 
-</p>
+    <h3 class="font-semibold text-gray-200 mb-1">Translation</h3>
+    <ul class="list-disc list-inside text-gray-300 mb-4">
+      <li>Chocohex</li>
+    </ul>
 
-<h3 class="font-semibold text-gray-200 mb-1">Additional Credits</h3>
-<p class="text-gray-300 mb-2">
-  - Oblivion Lost Remake Team, Hi_Flyer, Domestos, Macron
-</p>
-<p class="text-gray-300 mb-2">
-  - AMK Team, Shadows, Scavenger, Vincent Vega, RuWar, Dez0Wave Team, Zaurus, Maxim R., cOldSnake, LafuGix, OGSE team, Starleigh, Chriotmao, Amik
-</p>
-<p class="text-gray-300">
-  - C-Consciousness Discord & Moddb Group: 
-  <a href="https://www.moddb.com/groups/c-consciousness" target="_blank" class="text-blue-400 hover:underline">C-Consciousness</a>
-</p>
-
+    <h3 class="font-semibold text-gray-200 mb-1">Additional Credits</h3>
+    <ul class="list-disc list-inside text-gray-300 space-y-2">
+      <li>Oblivion Lost Remake Team, Hi_Flyer, Domestos, Macron</li>
+      <li>AMK Team, Shadows, Scavenger, Vincent Vega, RuWar, Dez0Wave Team, Zaurus, Maxim R., cOldSnake, LafuGix, OGSE team, Starleigh, Chriotmao, Amik</li>
+      <li>
+        C-Consciousness Discord & Moddb Group: 
+        <a href="https://www.moddb.com/groups/c-consciousness" target="_blank" class="text-blue-400 hover:underline">C-Consciousness</a>
+      </li>
+    </ul>
   </div>
 </body>
 </html>
