--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <h1 class="text-3xl font-bold">Cheeki's Mods Archive</h1>
       <div class="flex gap-2">
         <button id="toggle-videos" aria-label="Toggle videos visibility" class="bg-gray-700 hover:bg-gray-600 text-white text-xs font-medium py-1 px-2 rounded">
-          Hide Videos
+          Hide videos
         </button>
         <button id="contact-button" aria-label="Contact me" class="bg-gray-700 hover:bg-gray-600 text-white text-xs font-medium py-1 px-2 rounded">
           Contact me
