--- a/index.html
+++ b/index.html
@@ -1,26 +1,21 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Cheeki's Mods Archive</title>
-  <meta name="description" content="Archive of S.T.A.L.K.E.R. story mods. Reviewed and curated by Cheeki.">
-  <meta property="og:title" content="Cheeki's Mods Archive">
-  <meta property="og:description" content="Collection of S.T.A.L.K.E.R. story mods. Easy access, no ads.">
-  <meta property="og:image" content="https://img.youtube.com/vi/dQw4w9WgXcQ/hqdefault.jpg">
   <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
     .hide-videos iframe {
       display: none;
     }
-
     h3, .platform-block {
       white-space: nowrap;
       overflow: hidden;
       text-overflow: ellipsis;
     }
-
     .rating {
       flex-shrink: 0;
       overflow: hidden;
@@ -31,11 +26,11 @@
 </head>
 <body class="bg-gray-900 text-white font-sans p-4">
   <div class="max-w-6xl mx-auto">
-    <div class="flex justify-between items-center mb-1">
+    <div class="flex justify-between items-center mb-1 gap-2">
       <h1 class="text-3xl font-bold">Cheeki's Mods Archive</h1>
       <div class="flex gap-2">
         <button id="toggle-videos" aria-label="Toggle videos visibility" class="bg-gray-700 hover:bg-gray-600 text-white text-xs font-medium py-1 px-2 rounded">
-          Hide Videos
+          Hide videos
         </button>
         <button id="contact-button" aria-label="Contact me" class="bg-gray-700 hover:bg-gray-600 text-white text-xs font-medium py-1 px-2 rounded">
           Contact me
@@ -64,7 +59,7 @@
     </footer>
   </div>
 
-  <!-- Mod Install Guide Popup -->
+  <!-- Install Guide Popup -->
   <div id="popup-overlay" class="fixed inset-0 bg-black bg-opacity-70 flex justify-center items-center hidden z-50">
     <div class="bg-gray-900 rounded-lg max-w-2xl w-full max-h-[90vh] overflow-auto relative p-4">
       <button id="popup-close" aria-label="Close popup" class="absolute top-2 right-2 text-gray-400 hover:text-white text-xl">&times;</button>
@@ -74,13 +69,13 @@
 
   <!-- Contact Me Popup -->
   <div id="contact-overlay" class="fixed inset-0 bg-black bg-opacity-70 flex justify-center items-center hidden z-50">
-    <div class="bg-gray-900 rounded-lg max-w-md w-full max-h-[90vh] overflow-auto relative p-4">
+    <div class="bg-gray-900 rounded-lg max-w-md w-full p-4 relative text-sm text-gray-200">
       <button id="contact-close" aria-label="Close contact popup" class="absolute top-2 right-2 text-gray-400 hover:text-white text-xl">&times;</button>
-      <div class="text-sm text-gray-200">
-        <p class="mb-4">Only use this to report a broken link or incorrect information that needs fixed.</p>
-        <button id="reveal-email" class="bg-yellow-500 hover:bg-yellow-600 text-black text-xs font-medium py-1 px-3 rounded">Reveal Email</button>
-        <p id="email-text" class="mt-2 text-yellow-400 hidden">cheekitos@proton.me</p>
-      </div>
+      <p class="mb-4">Only use this to report a broken link or incorrect information that needs fixing.</p>
+      <button id="reveal-email" class="bg-yellow-500 hover:bg-yellow-600 text-black text-xs font-medium py-1 px-2 rounded">
+        Reveal Email
+      </button>
+      <p id="email-text" class="mt-2 text-blue-400 hidden">cheekitos@proton.me</p>
     </div>
   </div>
 
@@ -103,7 +98,6 @@
     function renderMods(modArray) {
       const container = document.getElementById('mod-list');
       container.innerHTML = '';
-
       modArray.forEach(mod => {
         const card = document.createElement('div');
         card.className = 'bg-gray-800 p-3 rounded-md shadow-sm flex flex-col h-full';
@@ -114,6 +108,9 @@
         const title = document.createElement('h3');
         title.className = 'text-2xl font-semibold text-gray-100 drop-shadow';
         title.textContent = mod.title;
+        title.style.whiteSpace = 'nowrap';
+        title.style.overflow = 'hidden';
+        title.style.textOverflow = 'ellipsis';
 
         const rating = document.createElement('div');
         rating.className = 'flex items-center space-x-0.5 text-yellow-400 rating';
@@ -142,6 +139,13 @@
           yesSpan.style.backgroundColor = 'rgba(250, 204, 21, 0.45)';
         }
 
+        standaloneWrapper.appendChild(yesSpan);
+
+        const sep = document.createElement('span');
+        sep.textContent = '|';
+        sep.className = 'text-gray-400 text-[10px] leading-tight';
+        standaloneWrapper.appendChild(sep);
+
         const noSpan = document.createElement('span');
         noSpan.textContent = 'No';
         noSpan.className = !mod.standalone
@@ -151,13 +155,40 @@
           noSpan.style.backgroundColor = 'rgba(250, 204, 21, 0.45)';
         }
 
-        standaloneWrapper.appendChild(yesSpan);
-        const sep1 = document.createElement('span');
-        sep1.textContent = '|';
-        sep1.className = 'text-gray-400 text-[10px] leading-tight';
-        standaloneWrapper.appendChild(sep1);
         standaloneWrapper.appendChild(noSpan);
         standaloneDiv.appendChild(standaloneWrapper);
+
+        const platformDiv = document.createElement('div');
+        platformDiv.className = 'text-xs text-white mb-2 flex items-baseline gap-2 platform-block';
+        platformDiv.style.whiteSpace = 'nowrap';
+        platformDiv.style.overflow = 'hidden';
+        platformDiv.style.textOverflow = 'ellipsis';
+
+        const labelPlatform = document.createElement('span');
+        labelPlatform.textContent = 'Platform:';
+        labelPlatform.className = 'leading-tight';
+        platformDiv.appendChild(labelPlatform);
+
+        const platformWrapper = document.createElement('div');
+        platformWrapper.className = 'flex items-center gap-1';
+
+        ['Shadow of Chernobyl', 'Clear Sky', 'Call of Pripyat'].forEach((plat, idx, arr) => {
+          const span = document.createElement('span');
+          span.textContent = plat;
+          span.className = (mod.platform === plat)
+            ? 'border border-white bg-yellow-400 bg-opacity-50 px-2 py-0.5 rounded-sm text-[10px] text-white leading-tight'
+            : 'text-gray-400 text-[10px] leading-tight';
+          platformWrapper.appendChild(span);
+
+          if (idx < arr.length - 1) {
+            const sep = document.createElement('span');
+            sep.textContent = '|';
+            sep.className = 'text-gray-400 text-[10px] leading-tight';
+            platformWrapper.appendChild(sep);
+          }
+        });
+
+        platformDiv.appendChild(platformWrapper);
 
         const desc = document.createElement('p');
         desc.className = 'text-gray-400 mb-2 text-sm';
@@ -184,24 +215,16 @@
         const videoWrapper = document.createElement('div');
         videoWrapper.className = 'mt-2';
 
-        const thumbnail = document.createElement('img');
-        const videoId = mod.video.split('/embed/')[1];
-        thumbnail.src = `https://img.youtube.com/vi/${videoId}/hqdefault.jpg`;
-        thumbnail.className = 'w-full aspect-video rounded cursor-pointer';
-        videoWrapper.appendChild(thumbnail);
-
-        thumbnail.addEventListener('click', () => {
-          const iframe = document.createElement('iframe');
-          iframe.src = mod.video;
-          iframe.className = 'w-full aspect-video rounded';
-          iframe.allow = 'accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture';
-          iframe.allowFullscreen = true;
-          videoWrapper.innerHTML = '';
-          videoWrapper.appendChild(iframe);
-        });
+        const video = document.createElement('iframe');
+        video.src = mod.video;
+        video.className = 'w-full aspect-video rounded';
+        video.allow = 'accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture';
+        video.allowFullscreen = true;
+        videoWrapper.appendChild(video);
 
         card.appendChild(titleRow);
         card.appendChild(standaloneDiv);
+        card.appendChild(platformDiv);
         card.appendChild(desc);
         card.appendChild(links);
         card.appendChild(videoWrapper);
@@ -226,34 +249,6 @@
       return starsHTML;
     }
 
-    document.getElementById('sort-button').addEventListener('click', () => {
-      sorted = !sorted;
-      const toRender = sorted
-        ? [...mods].sort((a, b) => parseFloat(b.rating) - parseFloat(a.rating))
-        : originalMods;
-      renderMods(toRender);
-    });
-
-    let debounce;
-    document.getElementById('search-input').addEventListener('input', e => {
-      clearTimeout(debounce);
-      debounce = setTimeout(() => {
-        const q = e.target.value.toLowerCase();
-        const filtered = mods.filter(mod =>
-          mod.title.toLowerCase().includes(q) ||
-          mod.description.toLowerCase().includes(q) ||
-          (mod.platform && mod.platform.toLowerCase().includes(q))
-        );
-        renderMods(filtered);
-      }, 300);
-    });
-
-    document.getElementById('toggle-videos').addEventListener('click', () => {
-      const btn = document.getElementById('toggle-videos');
-      const isHiding = document.body.classList.toggle('hide-videos');
-      btn.textContent = isHiding ? 'Show Videos' : 'Hide Videos';
-    });
-
     const overlay = document.getElementById('popup-overlay');
     const popupContent = document.getElementById('popup-content');
     const popupClose = document.getElementById('popup-close');
@@ -262,10 +257,23 @@
       popupContent.innerHTML = 'Loading...';
       overlay.classList.remove('hidden');
       fetch(url + '?v=' + Date.now())
-        .then(res => res.ok ? res.text() : Promise.reject())
-        .then(html => popupContent.innerHTML = html)
-        .catch(() => popupContent.innerHTML = '<p class="text-red-400">Failed to load guide.</p>');
+        .then(res => {
+          if (!res.ok) throw new Error('Failed to load');
+          return res.text();
+        })
+        .then(html => {
+          popupContent.innerHTML = html;
+          popupContent.scrollTop = 0;
+        })
+        .catch(() => {
+          popupContent.innerHTML = '<p class="text-red-400">Failed to load guide.</p>';
+        });
     }
+
+    popupClose.addEventListener('click', () => overlay.classList.add('hidden'));
+    overlay.addEventListener('click', e => {
+      if (e.target === overlay) overlay.classList.add('hidden');
+    });
 
     document.addEventListener('keydown', e => {
       if (e.key === 'Escape') {
@@ -274,16 +282,35 @@
       }
     });
 
-    overlay.addEventListener('click', e => {
-      if (e.target === overlay) overlay.classList.add('hidden');
+    document.getElementById('sort-button').addEventListener('click', () => {
+      sorted = !sorted;
+      const toRender = sorted
+        ? [...mods].sort((a, b) => parseFloat(b.rating) - parseFloat(a.rating))
+        : originalMods;
+      renderMods(toRender);
     });
 
-    popupClose.addEventListener('click', () => overlay.classList.add('hidden'));
+    document.getElementById('search-input').addEventListener('input', e => {
+      const q = e.target.value.toLowerCase();
+      const filtered = mods.filter(mod =>
+        mod.title.toLowerCase().includes(q) ||
+        mod.description.toLowerCase().includes(q) ||
+        (mod.platform && mod.platform.toLowerCase().includes(q))
+      );
+      renderMods(filtered);
+    });
 
+    document.getElementById('toggle-videos').addEventListener('click', () => {
+      const btn = document.getElementById('toggle-videos');
+      const isHiding = document.body.classList.toggle('hide-videos');
+      btn.textContent = isHiding ? 'Show Videos' : 'Hide Videos';
+    });
+
+    // Contact popup logic
     const contactOverlay = document.getElementById('contact-overlay');
     const contactBtn = document.getElementById('contact-button');
     const contactClose = document.getElementById('contact-close');
-    const revealEmailBtn = document.getElementById('reveal-email');
+    const revealEmail = document.getElementById('reveal-email');
     const emailText = document.getElementById('email-text');
 
     contactBtn.addEventListener('click', () => contactOverlay.classList.remove('hidden'));
@@ -291,7 +318,7 @@
     contactOverlay.addEventListener('click', e => {
       if (e.target === contactOverlay) contactOverlay.classList.add('hidden');
     });
-    revealEmailBtn.addEventListener('click', () => emailText.classList.remove('hidden'));
+    revealEmail.addEventListener('click', () => emailText.classList.remove('hidden'));
 
     loadMods();
   </script>
