--- a/guides/mod02-wot.html
+++ b/guides/mod02-wot.html
@@ -1,24 +1,27 @@
-<!DOCTYPE html>
+Skip to content
+Chat history
+
+You said:
+this is the html for a page on my website covering stalker mods: <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Wind Of Time</title>
+  <title>Vector of Alienation</title>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 </head>
 <body class="bg-gray-900 text-white font-sans p-6">
   <div class="max-w-3xl mx-auto bg-gray-800 p-6 rounded-lg shadow-lg">
     <!-- Title -->
-    <h1 class="text-2xl font-bold mb-4 border-b border-gray-600 pb-2">Wind Of Time</h1>
+    <h1 class="text-2xl font-bold mb-4 border-b border-gray-600 pb-2">Vector of Alienation</h1>
 
     <!-- Installation Guide -->
     <h2 class="text-xl font-semibold mb-2">Installation Guide</h2>
     <ul class="list-disc list-inside text-gray-300 mb-6 space-y-1">
-      <li>Step 1: Download all files.</li>
-      <li>Step 2: Extract to game directory.</li>
-      <li>Step 3: Apply patches if needed.</li>
-      <li>Step 4: Launch using provided launcher.</li>
-      <li>Step 5: Check mod settings for tweaks.</li>
+      <li>Extract Archive, move game folder to the root of your drive.</li>
+      <li>Launch XR_3DA.exe in the bin folder.</li>
+      <li>(optional) Run JSGME.exe and add addons you want.</li>
+      <li>(optional) Add the Vector Weapon Pack.</li>
     </ul>
     <hr class="border-gray-600 mb-6">
 
@@ -26,38 +29,119 @@
     <h2 class="text-xl font-semibold mb-2">Links</h2>
     <p class="text-gray-300 mb-1">
       Moddb Original Page: 
-      <a href="https://moddb.com" target="_blank" class="text-blue-400 hover:underline">https://moddb.com</a>
-    </p>
-    <p class="text-gray-300 mb-1">
-      Ap-pro Original Page: 
-      <a href="https://ap-pro.net" target="_blank" class="text-blue-400 hover:underline">https://ap-pro.net</a>
+      <a href="https://www.moddb.com/mods/olr-vector-of-alienation" target="_blank" class="text-blue-400 hover:underline">Vector of Alienation</a>
     </p>
     <p class="text-gray-300 mb-6">
-      Translation Original Page: 
-      <a href="https://translation.com" target="_blank" class="text-blue-400 hover:underline">https://translation.com</a>
+      Ap-pro Original Page: 
+      <a href="https://ap-pro.ru/stuff/ten_chernobylja/vektor-otchuzhdeniya-r158/" target="_blank" class="text-blue-400 hover:underline">Вектор Отчуждения</a>
     </p>
     <hr class="border-gray-600 mb-6">
 
     <!-- Credits Section -->
     <h2 class="text-xl font-semibold mb-2">Credits</h2>
 
-    <h3 class="font-semibold text-gray-200 mb-1">Mod Creators:</h3>
-    <p class="text-gray-300 mb-2">
-      Creator Name: 
-      <a href="https://creator1.com" target="_blank" class="text-blue-400 hover:underline">https://creator1.com</a>
-    </p>
+    <h3 class="font-semibold text-gray-200 mb-1">Mod Creator</h3>
+    <ul class="list-disc list-inside text-gray-300 mb-4">
+      <li>Dorian23Grey</li>
+    </ul>
 
-    <h3 class="font-semibold text-gray-200 mb-1">Translation:</h3>
-    <p class="text-gray-300 mb-2">
-      Translator Name: 
-      <a href="https://translator.com" target="_blank" class="text-blue-400 hover:underline">https://translator.com</a>
-    </p>
+    <h3 class="font-semibold text-gray-200 mb-1">Translation</h3>
+    <ul class="list-disc list-inside text-gray-300 mb-4">
+      <li>Chocohex</li>
+    </ul>
 
-    <h3 class="font-semibold text-gray-200 mb-1">Additional Credits:</h3>
-    <p class="text-gray-300 mb-2">
-      Tester Name: 
-      <a href="https://additional.com" target="_blank" class="text-blue-400 hover:underline">https://additional.com</a>
+    <h3 class="font-semibold text-gray-200 mb-1">Additional Credits</h3>
+    <ul class="list-disc list-inside text-gray-300 space-y-2">
+      <li>Oblivion Lost Remake Team, Hi_Flyer, Domestos, Macron</li>
+      <li>AMK Team, Shadows, Scavenger, Vincent Vega, RuWar, Dez0Wave Team, Zaurus, Maxim R., cOldSnake, LafuGix, OGSE team, Starleigh, Chriotmao, Amik</li>
+      <li>
+        C-Consciousness Discord & Moddb Group: 
+        <a href="https://www.moddb.com/groups/c-consciousness" target="_blank" class="text-blue-400 hover:underline">C-Consciousness</a>
+      </li>
+    </ul>
+  </div>
+</body>
+</html>   let's call it "the template"
+ChatGPT said:
+Got it — "the template" is now your base HTML structure for STALKER mod pages. Ready to help you modify or expand it as needed. Let me know what you want done.
+
+You said:
+can you fill the information of this mod in it instead ang give me the final code to copy paste: Wind of Time
+
+Installation Guide
+This is a repack of the 1.3 Standalone version + patch 1.1 + carlkuwait 2020 latest English translation
+Simply Extract Archive, move game folder to the root of your drive.
+Right Click Stalker-COP.exe -> properties -> compability -> run this program as administrator -> Apply/OK
+Lauch the game using Stalker-COP.exe, or "Memory Crash Fix.bat" if you have memory CTD's.
+
+Links
+Moddb Original Page: Wind of Time (https://www.moddb.com/mods/wind-of-time)
+
+Ap-pro Original Page: Ветер времени (https://ap-pro.ru/forums/topic/163-veter-vremeni-13/)
+
+Credits
+Mod Creator
+akmc47u
+
+Translation
+carlkuwait (English hand retranslation) 
+TKGP (OG machine translation) 
+ChatGPT said:
+Here’s the filled-in version of the template for Wind of Time — ready to copy-paste:
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Wind of Time</title>
+  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+</head>
+<body class="bg-gray-900 text-white font-sans p-6">
+  <div class="max-w-3xl mx-auto bg-gray-800 p-6 rounded-lg shadow-lg">
+    <!-- Title -->
+    <h1 class="text-2xl font-bold mb-4 border-b border-gray-600 pb-2">Wind of Time</h1>
+
+    <!-- Installation Guide -->
+    <h2 class="text-xl font-semibold mb-2">Installation Guide</h2>
+    <ul class="list-disc list-inside text-gray-300 mb-6 space-y-1">
+      <li>This is a repack of the 1.3 Standalone version + patch 1.1 + carlkuwait 2020 latest English translation.</li>
+      <li>Simply Extract Archive, move game folder to the root of your drive.</li>
+      <li>Right Click Stalker-COP.exe → Properties → Compatibility → Run this program as administrator → Apply/OK.</li>
+      <li>Launch the game using Stalker-COP.exe, or "Memory Crash Fix.bat" if you have memory CTDs.</li>
+    </ul>
+    <hr class="border-gray-600 mb-6">
+
+    <!-- Links Section -->
+    <h2 class="text-xl font-semibold mb-2">Links</h2>
+    <p class="text-gray-300 mb-1">
+      Moddb Original Page: 
+      <a href="https://www.moddb.com/mods/wind-of-time" target="_blank" class="text-blue-400 hover:underline">Wind of Time</a>
     </p>
+    <p class="text-gray-300 mb-6">
+      Ap-pro Original Page: 
+      <a href="https://ap-pro.ru/forums/topic/163-veter-vremeni-13/" target="_blank" class="text-blue-400 hover:underline">Ветер времени</a>
+    </p>
+    <hr class="border-gray-600 mb-6">
+
+    <!-- Credits Section -->
+    <h2 class="text-xl font-semibold mb-2">Credits</h2>
+
+    <h3 class="font-semibold text-gray-200 mb-1">Mod Creator</h3>
+    <ul class="list-disc list-inside text-gray-300 mb-4">
+      <li>akmc47u</li>
+    </ul>
+
+    <h3 class="font-semibold text-gray-200 mb-1">Translation</h3>
+    <ul class="list-disc list-inside text-gray-300 mb-4">
+      <li>carlkuwait (English hand retranslation)</li>
+      <li>TKGP (OG machine translation)</li>
+    </ul>
   </div>
 </body>
 </html>
+
+
+
+No file chosenNo file chosen
+ChatGPT can make mistakes. Check important info.
