--- a/guides/mod02-wot.html
+++ b/guides/mod02-wot.html
@@ -14,9 +14,9 @@
     <!-- Installation Guide -->
     <h2 class="text-xl font-semibold mb-2">Installation Guide</h2>
     <ul class="list-disc list-inside text-gray-300 mb-6 space-y-1">
-      <li>This is a repack of the 1.3 Standalone version + patch 1.1 + carlkuwait 2020 latest English translation.</li>
+      <li>Repack with 1.3 Standalone version + patch 1.1 + carlkuwait English translation.</li>
       <li>Simply Extract Archive, move game folder to the root of your drive.</li>
-      <li>Right Click Stalker-COP.exe → Properties → Compatibility → Run this program as administrator → Apply/OK.</li>
+      <li>Right Click Stalker-COP.exe → Properties → Compatibility → Run as administrator</li>
       <li>Launch the game using Stalker-COP.exe, or "Memory Crash Fix.bat" if you have memory CTDs.</li>
     </ul>
     <hr class="border-gray-600 mb-6">
