--- a/guides/mod02-wot.html
+++ b/guides/mod02-wot.html
@@ -17,7 +17,7 @@
       <li>Repack with 1.3 Standalone version + patch 1.1 + carlkuwait English translation.</li>
       <li>Simply Extract Archive, move game folder to the root of your drive.</li>
       <li>Right Click Stalker-COP.exe → Properties → Compatibility → Run as administrator</li>
-      <li>Launch the game using Stalker-COP.exe, or "Memory Crash Fix.bat" if you have memory CTDs.</li>
+      <li>Launch with Stalker-COP.exe, or "Memory Crash Fix.bat" if you have memory CTDs.</li>
     </ul>
     <hr class="border-gray-600 mb-6">
 
