--- a/guides/mod04-incubator.html
+++ b/guides/mod04-incubator.html
@@ -3,60 +3,74 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Goldsphere</title>
+  <title>Incubator</title>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 </head>
 <body class="bg-gray-900 text-white font-sans p-6">
   <div class="max-w-3xl mx-auto bg-gray-800 p-6 rounded-lg shadow-lg">
     <!-- Title -->
-    <h1 class="text-2xl font-bold mb-4 border-b border-gray-600 pb-2">Goldsphere</h1>
+    <h1 class="text-2xl font-bold mb-4 border-b border-gray-600 pb-2">Incubator</h1>
 
     <!-- Installation Guide -->
     <h2 class="text-xl font-semibold mb-2">Installation Guide</h2>
     <ul class="list-disc list-inside text-gray-300 mb-6 space-y-1">
-      <li>Step 1: Download all files.</li>
-      <li>Step 2: Extract to game directory.</li>
-      <li>Step 3: Apply patches if needed.</li>
-      <li>Step 4: Launch using provided launcher.</li>
-      <li>Step 5: Check mod settings for tweaks.</li>
+      <li>This is a standalone mod. The original game is NOT required.</li>
+      <li>Extract Archive, move game folder to the root of your drive.</li>
+      <li>Copy the translation gamedata folder into your game folder.</li>
+      <li>Launch the mod using "xrLauncher.exe" or "xrLauncher.bat".</li>
+      <li>(optional) Enable lightweight particles in JSGME mod manager.</li>
     </ul>
     <hr class="border-gray-600 mb-6">
 
     <!-- Links Section -->
     <h2 class="text-xl font-semibold mb-2">Links</h2>
     <p class="text-gray-300 mb-1">
-      Moddb Original Page: 
-      <a href="https://moddb.com" target="_blank" class="text-blue-400 hover:underline">https://moddb.com</a>
+      Official Page: 
+      <a href="https://vk.com/vivient_team_mods" target="_blank" class="text-blue-400 hover:underline">Vivient Team</a>
     </p>
     <p class="text-gray-300 mb-1">
       Ap-pro Original Page: 
-      <a href="https://ap-pro.net" target="_blank" class="text-blue-400 hover:underline">https://ap-pro.net</a>
+      <a href="https://ap-pro.ru/stuff/zov_pripjati/inkubator-r379/" target="_blank" class="text-blue-400 hover:underline">Инкубатор</a>
     </p>
     <p class="text-gray-300 mb-6">
-      Translation Original Page: 
-      <a href="https://translation.com" target="_blank" class="text-blue-400 hover:underline">https://translation.com</a>
+      English Translation: 
+      <a href="https://drive.google.com/file/d/1k7MbbxJlNu1rmdzs6kYt7ykhG9tuWGmL/edit" target="_blank" class="text-blue-400 hover:underline">Meztinos</a>
     </p>
     <hr class="border-gray-600 mb-6">
 
     <!-- Credits Section -->
     <h2 class="text-xl font-semibold mb-2">Credits</h2>
 
-    <h3 class="font-semibold text-gray-200 mb-1">Mod Creators:</h3>
-    <p class="text-gray-300 mb-2">
-      Creator Name: 
-      <a href="https://creator1.com" target="_blank" class="text-blue-400 hover:underline">https://creator1.com</a>
-    </p>
+    <h3 class="font-semibold text-gray-200 mb-1">Mod Creators</h3>
+    <ul class="list-disc list-inside text-gray-300 mb-4 space-y-1">
+      <li>4ECTOR: Plot, implementation, voice acting</li>
+      <li>MayLay: Programming and graphics</li>
+    </ul>
 
-    <h3 class="font-semibold text-gray-200 mb-1">Translation:</h3>
-    <p class="text-gray-300 mb-2">
-      Translator Name: 
-      <a href="https://translator.com" target="_blank" class="text-blue-400 hover:underline">https://translator.com</a>
-    </p>
+    <h3 class="font-semibold text-gray-200 mb-1">Translation</h3>
+    <ul class="list-disc list-inside text-gray-300 mb-4">
+      <li>Meztinos</li>
+    </ul>
 
-    <h3 class="font-semibold text-gray-200 mb-1">Additional Credits:</h3>
-    <p class="text-gray-300 mb-2">
-      Tester Name: 
-      <a href="https://additional.com" target="_blank" class="text-blue-400 hover:underline">https://additional.com</a>
+    <h3 class="font-semibold text-gray-200 mb-1">Voice Actors</h3>
+    <ul class="list-disc list-inside text-gray-300 mb-4 space-y-1">
+      <li>Oleg Korenev (HelgardRay) — Main character (Kramer)</li>
+      <li>Oleg Kuzma (Locksmith, 6th class) — Remark</li>
+      <li>Polina (PollyVader) — Morrigan</li>
+      <li>Artyom K. (LucioTraum) — Limp / Wounded Stalker</li>
+      <li>Natalia Aleinikova — Leliana</li>
+      <li>George_Marshall — Brutal mercs</li>
+      <li>Nikita (NikStrelok) — Professor Sokolov</li>
+      <li>SeeFuck — Serbin, mercenary scientists, Clever</li>
+      <li>Riddler- Enigma the stalker — Valentir</li>
+      <li>Alien — Professor Kirillov, Professor Kiparis</li>
+      <li>Vlad Chektorov — Stalker, Bandit, Assistant</li>
+      <li>SKETYFACE — Music, menu, ambients</li>
+    </ul>
+
+    <h3 class="font-semibold text-gray-200 mb-1">Special Thanks</h3>
+    <p class="text-gray-300">
+      Greshnik13rs, Den-Stash, Artyom Bannikov, Ninja_Nub, Angry Wolf, makar, aaz, Krim, Gefos, ABSOLUTE NATURE 4, Emmis, Diesel, Azetrix, One_Shot, S.W.R.P, 3fallout3, loner, DanteZ, Nestandart_5443, makdm, Bartender, Phantom_86, ferr-um, Shennondoah, 3vtiger, Demosfen, Viktor, Sin!, August Autumn, Huntsman with a Double Barrel, Salem, owlromeo, Over Media, lehnov1986, Crazy Stalker, Open X-Ray, HollyWoodFX
     </p>
   </div>
 </body>
