--- a/guides/mod04-incubator.html
+++ b/guides/mod04-incubator.html
@@ -14,11 +14,10 @@
     <!-- Installation Guide -->
     <h2 class="text-xl font-semibold mb-2">Installation Guide</h2>
     <ul class="list-disc list-inside text-gray-300 mb-6 space-y-1">
-      <li>This is a standalone mod. The original game is NOT required.</li>
       <li>Extract Archive, move game folder to the root of your drive.</li>
-      <li>Copy the translation gamedata folder into your game folder.</li>
+      <li>Copy the translation "gamedata" folder into your game folder.</li>
       <li>Launch the mod using "xrLauncher.exe" or "xrLauncher.bat".</li>
-      <li>(optional) Enable lightweight particles in JSGME mod manager.</li>
+      <li>(optional) Enable lightweight particles in JSGME for better performance.</li>
     </ul>
     <hr class="border-gray-600 mb-6">
 
