--- a/guides/mod04-incubator.html
+++ b/guides/mod04-incubator.html
@@ -14,8 +14,8 @@
     <!-- Installation Guide -->
     <h2 class="text-xl font-semibold mb-2">Installation Guide</h2>
     <ul class="list-disc list-inside text-gray-300 mb-6 space-y-1">
-      <li>Extract Archive, move game folder to the root of your drive.</li>
-      <li>Copy the translation "gamedata" folder into your game folder.</li>
+      <li>Extract Archive, then Unpack files by launching "INCUBATOR (23.03.2023).exe"</li>
+      <li>Copy the translation "gamedata" folder into your main game folder.</li>
       <li>Launch the mod using "xrLauncher.exe" or "xrLauncher.bat".</li>
       <li>(optional) Enable lightweight particles in JSGME for better performance.</li>
     </ul>
