--- a/guides/mod03-goldsphere.html
+++ b/guides/mod03-goldsphere.html
@@ -14,11 +14,10 @@
     <!-- Installation Guide -->
     <h2 class="text-xl font-semibold mb-2">Installation Guide</h2>
     <ul class="list-disc list-inside text-gray-300 mb-6 space-y-1">
-      <li>Step 1: Download all files.</li>
-      <li>Step 2: Extract to game directory.</li>
-      <li>Step 3: Apply patches if needed.</li>
-      <li>Step 4: Launch using provided launcher.</li>
-      <li>Step 5: Check mod settings for tweaks.</li>
+      <li>This is Goldsphere OGSR 1.3 Repack + All fixes by Toastman221 & Seushimare + Patch 1.4.3.5.</li>
+      <li>Requires Microsoft Visual C++ 2017, DirectX and OpenAL libraries like many old-school mods.</li>
+      <li>Extract Archive, move game folder to the root of your drive.</li>
+      <li>Launch "Start game.bat" or "xrEngine.exe" in the bin_x64 folder.</li>
     </ul>
     <hr class="border-gray-600 mb-6">
 
@@ -26,38 +25,45 @@
     <h2 class="text-xl font-semibold mb-2">Links</h2>
     <p class="text-gray-300 mb-1">
       Moddb Original Page: 
-      <a href="https://moddb.com" target="_blank" class="text-blue-400 hover:underline">https://moddb.com</a>
-    </p>
-    <p class="text-gray-300 mb-1">
-      Ap-pro Original Page: 
-      <a href="https://ap-pro.net" target="_blank" class="text-blue-400 hover:underline">https://ap-pro.net</a>
+      <a href="https://www.moddb.com/mods/goldsphere-completion" target="_blank" class="text-blue-400 hover:underline">Goldsphere Completion</a>
     </p>
     <p class="text-gray-300 mb-6">
-      Translation Original Page: 
-      <a href="https://translation.com" target="_blank" class="text-blue-400 hover:underline">https://translation.com</a>
+      Ap-pro Original Page: 
+      <a href="https://ap-pro.ru/forums/topic/2545-golden-sphere/" target="_blank" class="text-blue-400 hover:underline">Golden Sphere</a>
     </p>
     <hr class="border-gray-600 mb-6">
 
     <!-- Credits Section -->
     <h2 class="text-xl font-semibold mb-2">Credits</h2>
 
-    <h3 class="font-semibold text-gray-200 mb-1">Mod Creators:</h3>
-    <p class="text-gray-300 mb-2">
-      Creator Name: 
-      <a href="https://creator1.com" target="_blank" class="text-blue-400 hover:underline">https://creator1.com</a>
-    </p>
+    <h3 class="font-semibold text-gray-200 mb-1">Mod Creator</h3>
+    <ul class="list-disc list-inside text-gray-300 mb-4">
+      <li>jek@n</li>
+      <li>charsi</li>
+      <li>I am dead</li>
+    </ul>
 
-    <h3 class="font-semibold text-gray-200 mb-1">Translation:</h3>
-    <p class="text-gray-300 mb-2">
-      Translator Name: 
-      <a href="https://translator.com" target="_blank" class="text-blue-400 hover:underline">https://translator.com</a>
-    </p>
+    <h3 class="font-semibold text-gray-200 mb-1">Translation</h3>
+    <ul class="list-disc list-inside text-gray-300 mb-4">
+      <li>E'ruiq/jjzargo</li>
+      <li>skenka25013</li>
+    </ul>
 
-    <h3 class="font-semibold text-gray-200 mb-1">Additional Credits:</h3>
-    <p class="text-gray-300 mb-2">
-      Tester Name: 
-      <a href="https://additional.com" target="_blank" class="text-blue-400 hover:underline">https://additional.com</a>
-    </p>
+    <h3 class="font-semibold text-gray-200 mb-1">Additional Credits</h3>
+    <ul class="list-disc list-inside text-gray-300 space-y-1 mb-4">
+      <li>Mega_Worm - SDK Consultations</li>
+      <li>Developers of add-ons for the game engine v.10007</li>
+      <li>Rafael, Andrey S, TehTron, Assol and Olya - testers</li>
+      <li>Vlador and Pidzhoe - voicing the characters' phrases</li>
+      <li>Phorumer, Ed_rez, Editor46, Fedot "qwqwqw" - models of weapons and NPCs</li>
+      <li>Artos - scripting modules</li>
+      <li>Voltmod - working on sounds</li>
+      <li>Creators of OGSE 0692</li>
+      <li>GSC for the cult game</li>
+      <li>Everyone who chipped in for Zhekan for new equipment</li>
+      <li>Unofficial Patch: drCarabas, Hoperise, kamray27, nasar75, sergei27shus, Sharomet, 13stalker13</li>
+      <li>OGSR Engine developers: kroddin, dsh</li>
+    </ul>
   </div>
 </body>
 </html>
