--- a/guides/mod03-goldsphere.html
+++ b/guides/mod03-goldsphere.html
@@ -14,8 +14,8 @@
     <!-- Installation Guide -->
     <h2 class="text-xl font-semibold mb-2">Installation Guide</h2>
     <ul class="list-disc list-inside text-gray-300 mb-6 space-y-1">
-      <li>This is Goldsphere OGSR 1.3 Repack + All fixes by Toastman221 & Seushimare + Patch 1.4.3.5.</li>
-      <li>Requires Microsoft Visual C++ 2017, DirectX and OpenAL libraries like many old-school mods.</li>
+      <li>Goldsphere OGSR 1.3 + All fixes by Toastman221 & Seushimare + Patch 1.4.3.5.</li>
+      <li>Requires Microsoft Visual C++ 2017, DirectX and OpenAL like many old-school mods.</li>
       <li>Extract Archive, move game folder to the root of your drive.</li>
       <li>Launch "Start game.bat" or "xrEngine.exe" in the bin_x64 folder.</li>
     </ul>
@@ -67,3 +67,4 @@
   </div>
 </body>
 </html>
+
