--- a/guides/mod03-goldsphere.html
+++ b/guides/mod03-goldsphere.html
@@ -63,8 +63,13 @@
       <li>Everyone who chipped in for Zhekan for new equipment</li>
       <li>Unofficial Patch: drCarabas, Hoperise, kamray27, nasar75, sergei27shus, Sharomet, 13stalker13</li>
       <li>OGSR Engine developers: kroddin, dsh</li>
+      <li>
+        C-Consciousness Discord & Moddb Group: 
+        <a href="https://www.moddb.com/groups/c-consciousness" target="_blank" class="text-blue-400 hover:underline">C-Consciousness</a>
+      </li>
     </ul>
   </div>
 </body>
 </html>
+
 
