--- a/index.html
+++ b/index.html
@@ -22,6 +22,15 @@
       text-overflow: ellipsis;
       white-space: nowrap;
     }
+    #mod-list > div {
+  display: flex;
+  flex-direction: column;
+}
+
+#mod-list > div > iframe {
+  margin-top: auto;
+}
+
   </style>
 </head>
 <body class="bg-gray-900 text-white font-sans p-4">
