--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
         titleRow.appendChild(rating);
 
         const standaloneDiv = document.createElement('div');
-       standaloneDiv.className = 'standalone-row text-xs text-white mb-2';
+       standaloneDiv.className = 'standalone-row text-xs text-white mb-1'; // HERE
 
 
         const labelStandalone = document.createElement('span');
